force-app/main/default/objects/Opportunity/fields/Date_Of_Tax_Obligation__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Tax_Obligation__c</fullName>
    <label>Date Of Tax Obligation</label>
    <required>true</required>
    <type>Date</type>
</CustomField>