force-app/main/default/objects/Opportunity/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <label>Paid</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>