force-app/main/default/objects/Opportunity/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <label>Publish Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>